fix(GlPath): Keep path text white in dark mode

--- a/src/components/base/path/path.scss
+++ b/src/components/base/path/path.scss
@@ -13,7 +13,7 @@ $path-chevron-right-margin: px-to-rem(14px);
 
 // Mixins
 @mixin gl-path-active-item-color($color) {
-  @include gl-text-white;
+  @include gl-text-contrast-light;
   background-color: $color;
 
   &::after {
@@ -94,13 +94,13 @@ $path-chevron-right-margin: px-to-rem(14px);
     }
 
     &[disabled] {
-      @include gl-text-gray-400;
+      color: $gl-text-color-disabled;
       @include gl-cursor-not-allowed;
     }
 
     &:not([disabled]):hover {
       @include gl-path-active-item-color($gray-100);
-      @include gl-text-gray-900;
+      color: $gl-text-color;
     }
 
     &:active,
