--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -315,6 +315,7 @@ $t-gray-a-24: rgba($gray-950, 0.24);
 // Text
 $gl-text-color: $gray-900 !default;
 $gl-text-color-secondary: $gray-500 !default;
+$gl-text-color-disabled: $gray-400 !default;
 
 $gl-font-weight-light: 300;
 $gl-font-weight-normal: 400;
